load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

rust_library(
	name = "belalang_bytecode",
	srcs = glob(["src/*.rs"]),
	deps = [
		"@crates//:bincode",
		"@crates//:crc32fast",
		"@crates//:thiserror",
		"@crates//:serde",
	],
	visibility = ["//visibility:public"],
)

rust_test(
	name = "belalang_bytecode_test",
	crate = ":belalang_bytecode",
)
