load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

rust_library(
	name = "belalang_gc",
	srcs = glob(["src/**/*.rs"]),
	deps = [
		"@crates//:libc",
		"@crates//:thiserror",
		"@crates//:windows-sys",
	],
	visibility = ["//visibility:public"],
)

rust_test(
	name = "belalang_gc_itest",
	srcs = glob(["tests/**/*.rs"]),
	deps = [":belalang_gc"],
)
