load("@llvm-project//mlir:tblgen.bzl", "gentbl_cc_library", "td_library")
load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")
load("@rules_rust//rust:defs.bzl", "rust_library")

package(default_visibility = ["//visibility:public"])

td_library(
    name = "BelalangBIRTdFiles",
    srcs = [
        "include/belalang_ir/IR/BIRDialect.td",
        "include/belalang_ir/IR/BIROps.td",
        "include/belalang_ir/IR/BIRTypes.td",
    ],
    includes = ["include"],
    deps = [
        "@llvm-project//mlir:OpBaseTdFiles",
        "@llvm-project//mlir:BuiltinDialectTdFiles",
    ],
)

td_library(
    name = "BelalangPassesTdFiles",
    srcs = [
        "include/belalang_ir/Passes.td",
    ],
    includes = ["include"],
    deps = [
        "@llvm-project//mlir:PassBaseTdFiles",
    ],
)

gentbl_cc_library(
    name = "BelalangBIRDialectIncGen",
    tbl_outs = [
        (["-gen-dialect-decls"], "include/belalang_ir/IR/BIRDialect.h.inc"),
        (["-gen-dialect-defs"], "include/belalang_ir/IR/BIRDialect.cpp.inc"),
    ],
    tblgen = "@llvm-project//mlir:mlir-tblgen",
    td_file = "include/belalang_ir/IR/BIRDialect.td",
    deps = [":BelalangBIRTdFiles"],
)

gentbl_cc_library(
    name = "BelalangBIROpsIncGen",
    tbl_outs = [
        (["-gen-op-decls"], "include/belalang_ir/IR/BIROps.h.inc"),
        (["-gen-op-defs"], "include/belalang_ir/IR/BIROps.cpp.inc"),
        (["-gen-typedef-decls"], "include/belalang_ir/IR/BIRTypes.h.inc"),
        (["-gen-typedef-defs"], "include/belalang_ir/IR/BIRTypes.cpp.inc"),
    ],
    tblgen = "@llvm-project//mlir:mlir-tblgen",
    td_file = "include/belalang_ir/IR/BIROps.td",
    deps = [":BelalangBIRTdFiles"],
)

gentbl_cc_library(
    name = "BelalangPassIncGen",
    tbl_outs = [
        (["-gen-pass-decls"], "include/belalang_ir/Passes.h.inc"),
    ],
    tblgen = "@llvm-project//mlir:mlir-tblgen",
    td_file = "include/belalang_ir/Passes.td",
    deps = [":BelalangPassesTdFiles"],
)

cc_library(
    name = "belalang_ir",
    srcs = [
        "lib/IR/BIRDialect.cpp",
        "lib/Passes.cpp",
    ],
    hdrs = [
        "include/belalang_ir/IR/BIRDialect.h",
        "include/belalang_ir/Passes.h",
    ],
    includes = ["include"],
    deps = [
        ":BelalangBIRDialectIncGen",
        ":BelalangBIROpsIncGen",
        ":BelalangPassIncGen",
        "@llvm-project//mlir:Pass",
        "@llvm-project//mlir:IR",
        "@llvm-project//mlir:Support",
        "@llvm-project//mlir:BytecodeOpInterface",
        "@llvm-project//mlir:ArithDialect",
        "@llvm-project//mlir:TransformUtils",
    ],
)

cc_binary(
    name = "bir-opt",
    srcs = ["tools/bir-opt/bir-opt.cpp"],
    deps = [
        ":belalang_ir",
        "@llvm-project//mlir:ArithDialect",
        "@llvm-project//mlir:FuncDialect",
        "@llvm-project//mlir:IR",
        "@llvm-project//mlir:MlirOptLib",
    ],
)

rust_library(
    name = "belalang_ir_rs",
    srcs = ["src/lib.rs"],
    deps = [
        ":belalang_ir",
        "@crates//:cxx",
    ],
)
