[package]
name = "belalang_ir"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
mlir = ["dep:cxx", "dep:cxx-build", "dep:cmake"]

[lints]
workspace = true

[dependencies]
cxx = { version = "1.0.194", optional = true }

[build-dependencies]
build-rs = "0.3"
cmake = { version = "0.1", optional = true }
cxx-build = { version = "1.0.194", optional = true }
