[package]
name = "belalang_vm"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
belalang_bytecode.workspace = true
belalang_macros.workspace = true
thiserror.workspace = true

[dev-dependencies]
belalang_dev_tools.workspace = true
