[package]
name = "belalang_vm"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
belalang_bytecode.workspace = true
libc.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dependencies.windows-sys]
workspace = true
features = [
  "Win32_System_SystemInformation",
  "Win32_System_Memory",
  "Win32_Foundation",
]

[dev-dependencies]
belalang_dev_tools.workspace = true
tracing-subscriber.workspace = true
