load("@rules_rust//rust:defs.bzl", "rust_library", "rust_binary")

rust_library(
	name = "belalang_dev_tools",
	srcs = glob(["src/**/*.rs"]),
	deps = [
		"//crates/belalang_ast:belalang_ast",
		"//crates/belalang_lexer:belalang_lexer",
		"//crates/belalang_vm:belalang_vm",
		"//crates/belalang_bytecode:belalang_bytecode",
	],
	visibility = ["//visibility:public"],
)

rust_binary(
	name = "lexer",
	srcs = ["interactive/lexer.rs"],
	deps = [
		"//crates/belalang_lexer:belalang_lexer",
	],
)

rust_binary(
	name = "parser",
	srcs = ["interactive/parser.rs"],
	deps = [
		"//crates/belalang_ast:belalang_ast",
		"//crates/belalang_lexer:belalang_lexer",
	],
)
