load("@rules_python//python:defs.bzl", "py_binary")
load("//tests:lit.bzl", "lit_test")

BELALANG_TESTS = glob(["*.bel"])

lit_test(
    name = "lit_test",
    tests = BELALANG_TESTS,
    data = [
        "//cli:belalang",
    ],
    env = {
        "BELALANG": "$(rlocationpath //cli:belalang)",
    },
)

py_binary(
    name = "update",
    srcs = ["update.py"],
    data = [
        "//cli:belalang",
    ],
    args = [
        "$(location //cli:belalang)",
    ],
)

