load("@rules_python//python:defs.bzl", "py_binary")
load("//tests:lit.bzl", "lit_test")

BELALANG_TESTS = glob(["*.bel"])

lit_test(
    name = "lit_test",
    tests = BELALANG_TESTS,
    data = [
        "//bin/belalang",
    ],
    env = {
        "BELALANG": "$(rlocationpath //bin/belalang)",
    },
)

py_binary(
    name = "update",
    srcs = ["update.py"],
    data = [
        "//bin/belalang",
    ],
    args = [
        "$(location //bin/belalang)",
    ],
)

